fix: horizontal scroll for content patch

--- a/index.css
+++ b/index.css
@@ -26,6 +26,6 @@
 
 @media (max-width: 850px) {
     .center {
-        width: 100%;
+        width: 95%;
     }
 }
